# poc-mlops

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
cli/: main.py
dashboard/: main.py
ml/: data.py  evaluate.py  model.py  predict.py  training.py
